Fixed a bug on mobile displays where header was too wide for its container.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,9 +185,9 @@ header {
 }
 
 h1 {
-    width: 345px;
+    width: 320px;
     margin: 0 auto 1em;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 20px;
 }
 
